Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- Properties export/import: Get the string encoding for property 
  imports from the import context and fall back to UTF-8, which 
  mirrors the behavior for exports. This fixes property export/import 
  round tripping.
  (https://bugs.launchpad.net/zope-cmf/+bug/248853)

- traversal: Added ++add++ namespace for add views.

- Skinstool import: Fix imports that manipulate existing skins.
  (https://bugs.launchpad.net/zope-cmf/+bug/161732)

- ActionInformation: extend the ActionInformation and ActionInfo classes 
  to support a icon URL just like the newer Action class already does

- WorkflowTool: Passing the "magic" chain name "(Default)" to the
  setChainForPortalTypes method did not set the chain to the default 
  chain value as expected.
  (https://bugs.launchpad.net/zope-cmf/+bug/161702)

- ZMI: Prevent users from creating content through the ZMI by hiding the
  entry for "CMFCore Content".

- utils: Add a new optional argument to ContentInit that allows hiding
  a content item's ZMI add list entry. The default is to leave the item
  visible, which reflects the previous behavior.

- FSMetadata: Remove handling of .security and .properties metadata
  files which was supposed to have been removed in CMF 2.0 already.

- SkinsTool: Added the ability to do a diff comparison between items
  found using the portal_skins "Find" ZMI tab.
  (https://bugs.launchpad.net/zope-cmf/+bug/238489)

- fiveactionstool: fix typo in a method name that isn't even used in the CMF 
  or Plone.
  (https://bugs.launchpad.net/zope-cmf/+bug/257259)

- TypeInformation and TypesTool: Added support for add view actions.
  Type infos now have a new 'add_view_expr' property and implement IAction.
  'listActions' of the types tool includes type infos as 'add' actions.

- interfaces: Fixed some docstrings.
  There is no IActionInformation. ActionInformation is an old action class